feat(web): match CSV name to input filename; add results summary\n\n- Track original filename end-to-end\n- Include file size, word count, and pair count in UI\n- Use {input}.csv naming on download\n- Update summary display to show expected CSV name\n- Add plain sharing message file

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@
 # OpenRouter (recommended free option)
 OPENAI_API_KEY=your_openrouter_api_key_here
 OPENAI_BASE_URL=https://openrouter.ai/api/v1
-QWEN_GEN_MODEL=qwen/qwen3-next-80b-a3b-instruct
-QWEN_REVIEW_MODEL=qwen/qwen3-next-80b-a3b-instruct
+QWEN_GEN_MODEL=qwen/qwen3-30b-a3b:free
+QWEN_REVIEW_MODEL=qwen/qwen3-30b-a3b:free
 
 # Alternative: DashScope (Alibaba Cloud)
 # OPENAI_API_KEY=your_dashscope_api_key_here
